add antea tests